Fixes advantages cards gap

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -12,7 +12,7 @@
 
   @include vp-767 {
     padding-top: 57px;
-    padding-bottom: 121px;
+    padding-bottom: 65px;
   }
 
   &::after {
@@ -53,13 +53,13 @@
     margin: 0;
 
     @include vp-1023 {
-      gap: 4.4%;
+      column-gap: 4.4%;
     }
 
     @include vp-767 {
       grid-template-columns: minmax(0, 1fr);
       grid-auto-rows: initial;
-      gap: 3.8%;
+      gap: 28px;
     }
   }
 }
